--- a/ansible.cfg
+++ b/ansible.cfg
@@ -1,1 +1,6 @@
 # Ansible configuration file
+[defaults]
+inventory = inventory/lab.ini
+roles_path = roles
+host_key_checking = False
+stdout_callback = yaml
