--- a/roles/docker/defaults/main.yml
+++ b/roles/docker/defaults/main.yml
@@ -23,7 +23,7 @@ docker_packages:
 
 # User to add into docker group
 docker_users:
-  - "{{ docker_primary_user }}"
+  - "{{ lab_primary_user }}"
 
 docker_primary_user: "{{ lookup('env', 'USER') | default('inam', true) }}"
 
