--- a/roles/jenkins_controller/tasks/main.yml
+++ b/roles/jenkins_controller/tasks/main.yml
@@ -32,3 +32,5 @@
     published_ports: "{{ jenkins_ports }}"
     volumes:
       - "{{ jenkins_data_dir }}:/var/jenkins_home"
+    mem_limit: 1g
+    cpu: 1
