--- a/roles/jenkins_controller/tasks/main.yml
+++ b/roles/jenkins_controller/tasks/main.yml
@@ -32,5 +32,5 @@
     published_ports: "{{ jenkins_ports }}"
     volumes:
       - "{{ jenkins_data_dir }}:/var/jenkins_home"
-    mem_limit: 1g
-    cpu: 1
+    memory: 1g  # Set memory limit
+    cpu_shares: 1024  # Set CPU priority (relative weight, 1024 is the default)
