fix mem and cpu limit of jenkins

--- a/roles/jenkins_controller/tasks/main.yml
+++ b/roles/jenkins_controller/tasks/main.yml
@@ -33,4 +33,5 @@
     volumes:
       - "{{ jenkins_data_dir }}:/var/jenkins_home"
     memory: 1g  # Set memory limit
+    memoryswap: 2g  # Set memory swap limit
     cpu_shares: 1024  # Set CPU priority (relative weight, 1024 is the default)
